; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_alloc.c_hns_roce_init_buf_region.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/hns/extr_hns_roce_alloc.c_hns_roce_init_buf_region.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns_roce_buf_region = type { i32, i32, i32 }

@HNS_ROCE_HOP_NUM_0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hns_roce_init_buf_region(%struct.hns_roce_buf_region* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.hns_roce_buf_region*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.hns_roce_buf_region* %0, %struct.hns_roce_buf_region** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @HNS_ROCE_HOP_NUM_0, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %4
  %13 = load %struct.hns_roce_buf_region*, %struct.hns_roce_buf_region** %5, align 8
  %14 = getelementptr inbounds %struct.hns_roce_buf_region, %struct.hns_roce_buf_region* %13, i32 0, i32 0
  store i32 0, i32* %14, align 4
  br label %19

15:                                               ; preds = %4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.hns_roce_buf_region*, %struct.hns_roce_buf_region** %5, align 8
  %18 = getelementptr inbounds %struct.hns_roce_buf_region, %struct.hns_roce_buf_region* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  br label %19

19:                                               ; preds = %15, %12
  %20 = load i32, i32* %7, align 4
  %21 = load %struct.hns_roce_buf_region*, %struct.hns_roce_buf_region** %5, align 8
  %22 = getelementptr inbounds %struct.hns_roce_buf_region, %struct.hns_roce_buf_region* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load %struct.hns_roce_buf_region*, %struct.hns_roce_buf_region** %5, align 8
  %25 = getelementptr inbounds %struct.hns_roce_buf_region, %struct.hns_roce_buf_region* %24, i32 0, i32 2
  store i32 %23, i32* %25, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
